# alfred-randomer

./: .editorconfig  .gitignore  BRANCHES.md  Makefile  README.md  SETUP.md  info.plist  pyproject.toml
.github/workflows/: README.md  lint.yml  test.yml
scripts/: build.sh  release.sh
src/: generators.py  main.py
tests/: README.md  test_generators.py  test_main.py
